@startuml

title __ADAPTER's Class Diagram__\n

  namespace com.yyzy.constellation {
    namespace dict {
      namespace adapter {
        class com.yyzy.constellation.dict.adapter.CollectFragmentAdapter {
            ~ list : List<Fragment>
            ~ title : String[]
            + CollectFragmentAdapter()
            + getCount()
            + getItem()
            + getPageTitle()
        }
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace dict {
      namespace adapter {
        class com.yyzy.constellation.dict.adapter.SearchLeftAdapter {
            - childDatas : List<List<ResultDTO>>
            - context : Context
            - groupDatas : List<String>
            - inflater : LayoutInflater
            - selectChildPos : int
            - selectGroupPos : int
            - type : int
            + SearchLeftAdapter()
            + getChild()
            + getChildId()
            + getChildView()
            + getChildrenCount()
            + getGroup()
            + getGroupCount()
            + getGroupId()
            + getGroupView()
            + hasStableIds()
            + isChildSelectable()
            + setSelectChildPos()
            + setSelectGroupPos()
        }
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace dict {
      namespace adapter {
        class com.yyzy.constellation.dict.adapter.SearchLeftAdapter.ChildViewHolder {
            ~ childTv : TextView
            + ChildViewHolder()
        }
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace dict {
      namespace adapter {
        class com.yyzy.constellation.dict.adapter.SearchLeftAdapter.GroupViewHolder {
            ~ groupTv : TextView
            + GroupViewHolder()
        }
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace dict {
      namespace adapter {
        class com.yyzy.constellation.dict.adapter.SearchRightAdapter {
            - context : Context
            - inflater : LayoutInflater
            - mDatas : List<ListBean>
            + SearchRightAdapter()
            + getCount()
            + getItem()
            + getItemId()
            + getView()
        }
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace dict {
      namespace adapter {
        class com.yyzy.constellation.dict.adapter.SearchRightAdapter.ViewHolder {
            ~ tv : TextView
            + ViewHolder()
        }
      }
    }
  }
  

  com.yyzy.constellation.dict.adapter.CollectFragmentAdapter -up-|> androidx.fragment.app.FragmentStatePagerAdapter
  com.yyzy.constellation.dict.adapter.SearchLeftAdapter -up-|> android.widget.BaseExpandableListAdapter
  com.yyzy.constellation.dict.adapter.SearchLeftAdapter +-down- com.yyzy.constellation.dict.adapter.SearchLeftAdapter.ChildViewHolder
  com.yyzy.constellation.dict.adapter.SearchLeftAdapter +-down- com.yyzy.constellation.dict.adapter.SearchLeftAdapter.GroupViewHolder
  com.yyzy.constellation.dict.adapter.SearchRightAdapter -up-|> android.widget.BaseAdapter
  com.yyzy.constellation.dict.adapter.SearchRightAdapter +-down- com.yyzy.constellation.dict.adapter.SearchRightAdapter.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
